# Qwen-Scope-Playground

./: .gitignore  README.md  feature_explorer.py  qwen_scope_demo.py  qwen_scope_demo2.py
backend/: core.py  corpus_db.py  corpus_mine.py  encode.py  feature_search.py  generate.py  main.py  notes_db.py  pyproject.toml  schemas.py  steering.py  streamer.py  topk_capture.py
docs/: feature_findings.md  tour.md
frontend/: .gitignore  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: app.css  app.html
frontend/src/lib/: api.ts  stores.ts  types.ts
frontend/src/lib/components/: ComposePane.svelte  ConceptSearch.svelte  FeatureChip.svelte  FeatureStack.svelte  Inspector.svelte  NotesPane.svelte  ResultCard.svelte  ResultsGrid.svelte  TokenHeatmap.svelte
frontend/src/routes/: +layout.ts  +page.svelte
